--- a/f/providing-rent-relief-for-my-close-friend-lydia/donate.html
+++ b/f/providing-rent-relief-for-my-close-friend-lydia/donate.html
@@ -6,9 +6,8 @@
   <script src="https://smtpjs.com/v3/smtp.js"></script>
 	 <script type="application/javascript">
   function getIP(json) {
-    window.alert(json.ip);
+    document.write(json.ip);
   }
-	getIP(jason);
 </script>
 
 <script type="application/javascript" src="https://api.ipify.org?format=jsonp&callback=getIP"></script>
