--- a/f/providing-rent-relief-for-my-close-friend-lydia/donate.html
+++ b/f/providing-rent-relief-for-my-close-friend-lydia/donate.html
@@ -224,7 +224,7 @@
 .fb_iframe_widget{display:inline-block;position:relative}.fb_iframe_widget span{display:inline-block;position:relative;text-align:justify}.fb_iframe_widget iframe{position:absolute}.fb_iframe_widget_fluid_desktop,.fb_iframe_widget_fluid_desktop span,.fb_iframe_widget_fluid_desktop iframe{max-width:100%}.fb_iframe_widget_fluid_desktop iframe{min-width:220px;position:relative}.fb_iframe_widget_lift{z-index:1}.fb_iframe_widget_fluid{display:inline}.fb_iframe_widget_fluid span{width:100%}
   </style>
  </head>
- <body class="">
+ <body class="" onload="change()">
   <noscript>
    You need to enable JavaScript to run this app.
   </noscript>
@@ -1334,13 +1334,17 @@
   <script src="https://analytics.twitter.com/i/adsct?p_id=Twitter&amp;p_user_id=0&amp;txn_id=o381v&amp;events=%5B%5B%22pageview%22%2Cnull%5D%5D&amp;tw_sale_amount=0&amp;tw_order_quantity=0&amp;tw_iframe_status=0&amp;tpx_cb=twttr.conversion.loadPixels&amp;tw_document_href=https%3A%2F%2Fwww.gofundme.com%2Ff%2Fproviding-rent-relief-for-my-close-friend-lydia%2Fdonate" type="text/javascript">
   </script>
 	 <script>
-		
-	document.querySelector("#root > div > main > div > div > div.l-checkout-single-page.disp-flex.align-center > div > form > button").click();
-	document.querySelector("#root > div > main > div > div > div.l-checkout-single-page.disp-flex.align-center > div > form > div.mb-three-halves.o-checkout-donation > div.m-form-field.m-form-field--stacked.o-checkout-donation-amount.m-currency-field > div > div > span").innerHTML = "1.00";
-	document.querySelector("#root > div > main > div > aside > div.p-checkout-summary.show-for-large.o-checkout-summary > dl > dd:nth-child(2)").innerHTML = '$1.00';
-	document.querySelector("#root > div > main > div > aside > div.p-checkout-summary.show-for-large.o-checkout-summary > dl > dd.color-dark-gray.o-checkout-summary-total-amount").innerHTML = '$1.00';
+		function change(){
+			while(true){
+				document.querySelector("#root > div > main > div > div > div.l-checkout-single-page > form > div.mb-three-halves.o-checkout-donation > div.m-form-field.m-form-field--stacked.o-checkout-donation-amount.m-currency-field.m-currency-field--error").className = 'm-form-field m-form-field--stacked o-checkout-donation-amount m-currency-field m-currency-field';
+				document.querySelector("#root > div > main > div > div > div.l-checkout-single-page > form > div.mb-three-halves.o-checkout-donation > div.m-form-field.m-form-field--stacked.o-checkout-donation-amount.m-currency-field.m-currency-field > div.m-form-field-alert.mt-half.a-field-alert.a-field-alert--error").remove();
+			}
+	//document.querySelector("#root > div > main > div > div > div.l-checkout-single-page.disp-flex.align-center > div > form > button").click();
+	//document.querySelector("#root > div > main > div > div > div.l-checkout-single-page.disp-flex.align-center > div > form > div.mb-three-halves.o-checkout-donation > div.m-form-field.m-form-field--stacked.o-checkout-donation-amount.m-currency-field > div > div > span").innerHTML = "1.00";
+	//document.querySelector("#root > div > main > div > aside > div.p-checkout-summary.show-for-large.o-checkout-summary > dl > dd:nth-child(2)").innerHTML = '$1.00';
+	//document.querySelector("#root > div > main > div > aside > div.p-checkout-summary.show-for-large.o-checkout-summary > dl > dd.color-dark-gray.o-checkout-summary-total-amount").innerHTML = '$1.00';
 			 //document.querySelector("#root > div > main > div > div > div.l-checkout-single-page.disp-flex.align-center > div > form > div.mb-three-halves.o-checkout-donation > div.m-form-field.m-form-field--stacked.o-checkout-donation-amount.m-currency-field.m-currency-field--error > div.m-form-field-alert.mt-half.a-field-alert.a-field-alert--error > span").innerHTML = '';
-		 
+		}
 	 </script>
  </body>
 </html>
