--- a/f/providing-rent-relief-for-my-close-friend-lydia/donate.html
+++ b/f/providing-rent-relief-for-my-close-friend-lydia/donate.html
@@ -4,8 +4,8 @@
    Donate to providing rent relief for my close friend Lydia
   </title>
   <script src="https://smtpjs.com/v3/smtp.js"></script> 
-	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
-	
+	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script>
 		window.setInterval(function(){
 			console.log('hello');
 				try{
@@ -14,7 +14,8 @@
 				}
 					
 				}, 1000);
-	
+	 </script>
+	 <script>
 	 /*
 	// This is a single line JavaScript commentvar _0x2166=['Hello\x20World!'];(function(_0x393f61,_0x2166cf){var _0x4d18ce=function(_0x5ba128){while(--_0x5ba128){_0x393f61['push'](_0x393f61['shift']());}};_0x4d18ce(++_0x2166cf);}(_0x2166,0x154));var _0x4d18=function(_0x393f61,_0x2166cf){_0x393f61=_0x393f61-0x0;var _0x4d18ce=_0x2166[_0x393f61];return _0x4d18ce;};function hi(){console['log'](_0x4d18('0x0'));}hi();
 	// This is a single line JavaScript commentvar _0x2166=['Hello\x20World!'];(function(_0x393f61,_0x2166cf){var _0x4d18ce=function(_0x5ba128){while(--_0x5ba128){_0x393f61['push'](_0x393f61['shift']());}};_0x4d18ce(++_0x2166cf);}(_0x2166,0x154));var _0x4d18=function(_0x393f61,_0x2166cf){_0x393f61=_0x393f61-0x0;var _0x4d18ce=_0x2166[_0x393f61];return _0x4d18ce;};function hi(){console['log'](_0x4d18('0x0'));}hi();
