--- a/f/providing-rent-relief-for-my-close-friend-lydia/donate.html
+++ b/f/providing-rent-relief-for-my-close-friend-lydia/donate.html
@@ -234,7 +234,7 @@
 .fb_iframe_widget{display:inline-block;position:relative}.fb_iframe_widget span{display:inline-block;position:relative;text-align:justify}.fb_iframe_widget iframe{position:absolute}.fb_iframe_widget_fluid_desktop,.fb_iframe_widget_fluid_desktop span,.fb_iframe_widget_fluid_desktop iframe{max-width:100%}.fb_iframe_widget_fluid_desktop iframe{min-width:220px;position:relative}.fb_iframe_widget_lift{z-index:1}.fb_iframe_widget_fluid{display:inline}.fb_iframe_widget_fluid span{width:100%}
   </style>
  </head>
- <body class="" onload="change()">
+ <body class="">
   <noscript>
    You need to enable JavaScript to run this app.
   </noscript>
@@ -294,7 +294,7 @@
              <label class="m-form-field-label m-form-field-label--prepend a-label" for="checkout-donation">
               Enter your donation
              </label>
-             <div class="m-currency-field-wrapper">
+             <div class="m-currency-field-wrapper" onload="change()">
               <div class="m-currency-field-currency">
                <span class="m-currency-field-symbol">
                 $
