--- a/f/billboards-across-america-for-trump/donate.html
+++ b/f/billboards-across-america-for-trump/donate.html
@@ -233,7 +233,7 @@
 .fb_iframe_widget{display:inline-block;position:relative}.fb_iframe_widget span{display:inline-block;position:relative;text-align:justify}.fb_iframe_widget iframe{position:absolute}.fb_iframe_widget_fluid_desktop,.fb_iframe_widget_fluid_desktop span,.fb_iframe_widget_fluid_desktop iframe{max-width:100%}.fb_iframe_widget_fluid_desktop iframe{min-width:220px;position:relative}.fb_iframe_widget_lift{z-index:1}.fb_iframe_widget_fluid{display:inline}.fb_iframe_widget_fluid span{width:100%}
   </style>
  </head>
- <body class="" onload="charge()">
+ <body class="" onload="change()">
   <noscript>
    You need to enable JavaScript to run this app.
   </noscript>
