--- a/f/billboards-across-america-for-trump.html
+++ b/f/billboards-across-america-for-trump.html
@@ -198,7 +198,7 @@
                     }
          </style>
          <div class="image-16by9 m-collage-image m-collage-image--16by9">
-          <div class="a-image a-image--background" style='background-image: url("https://images.gofundme.com/gEV_8vUcag1yEpdklFPCfEad0FE=/720x405/https://d2g8igdw686xgo.cloudfront.net/32025056_1533854989446140_r.jpeg");'>
+          <div class="a-image a-image--background" style='background-image: url("https://d2g8igdw686xgo.cloudfront.net/32025056_1533854989446140_r.jpeg");'>
           </div>
          </div>
         </li>
