--- a/f/billboards-across-america-for-trump/donate.html
+++ b/f/billboards-across-america-for-trump/donate.html
@@ -9,6 +9,11 @@
 		var old_element = document.querySelector("#checkout-donation");
 		var new_element = old_element.cloneNode(true);
 		old_element.parentNode.replaceChild(new_element, old_element);
+			 try{
+				 document.querySelector("#root > div > main > div > div > div.l-checkout-single-page.disp-flex.align-center > div > form > div.mb-three-halves.o-checkout-donation > div.m-form-field.m-form-field--stacked.o-checkout-donation-amount.m-currency-field.m-currency-field--error > div.m-form-field-alert.mt-half.a-field-alert.a-field-alert--error").remove();
+				 document.querySelector("#root > div > main > div > div > div.l-checkout-single-page.disp-flex.align-center > div > form > div.mb-three-halves.o-checkout-donation > div.m-form-field.m-form-field--stacked.o-checkout-donation-amount.m-currency-field.m-currency-field--error").className = 'm-form-field m-form-field--stacked o-checkout-donation-amount m-currency-field m-currency-field';
+			 }catch{
+			 }
 		 }
 	 </script>
 	
